--- a/src/agilex.persistence.nhibernate/agilex.persistence.nhibernate.csproj
+++ b/src/agilex.persistence.nhibernate/agilex.persistence.nhibernate.csproj
@@ -63,6 +63,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\agilex.persistence\agilex.persistence.csproj">
+      <Project>{F85711F1-016E-4B11-8FB9-003E98F72C9A}</Project>
+      <Name>agilex.persistence</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
