--- a/src/agilex.persistence.nhibernate/agilex.persistence.nhibernate.csproj
+++ b/src/agilex.persistence.nhibernate/agilex.persistence.nhibernate.csproj
@@ -47,6 +47,7 @@
       <HintPath>..\packages\NHibernate.Castle.3.1.0.4000\lib\Net35\NHibernate.ByteCode.Castle.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
